# mcpterm-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  debug_tui.sh  patch_filter.rs  patch_tool_handler.rs  test_clean.sh  test_direct_mode.sh  test_slash_commands.rs
.github/workflows/: rust-ci.yml
archives/p1/: Cargo.toml  README.md  TROUBLESHOOTING.md  find_logs.sh  run_with_debug.sh
archives/p1/src/: main.rs
archives/p1/src/agent/: bedrock.rs  bedrock_sync.rs  mcp_agent.rs  mod.rs  stub.rs
archives/p1/src/config/: mod.rs
archives/p1/src/editor/: MIGRATION_PLAN.md  README.md  common.rs  edtui_editor.rs  mod.rs  readonly_editor.rs
archives/p1/src/journal/: mod.rs  test.rs
archives/p1/src/mcp/: handler.rs  logging.rs  mod.rs  setup.rs
archives/p1/src/mcp/protocol/: error.rs  message.rs  mod.rs  tests.rs  validation.rs
archives/p1/src/mcp/resources/: file.rs  memory.rs  methods.rs  mod.rs  tests.rs
archives/p1/src/mcp/tools/: coding.rs  methods.rs  mod.rs  search.rs  shell.rs
archives/p1/src/ui/: input.rs  keybindings.rs  message.rs  mod.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/mcp-core/: Cargo.toml  README.md
crates/mcp-core/examples/: logging_levels.rs
crates/mcp-core/src/: lib.rs
crates/mcp-core/src/commands/: mcp.rs  mod.rs
crates/mcp-core/src/config/: mod.rs
crates/mcp-core/src/context/: mod.rs
crates/mcp-core/src/jsonrpc/: extractor.rs  filter.rs  mod.rs  splitter.rs
crates/mcp-core/src/jsonrpc/tests/: duplicate_tool_detection_test.rs
crates/mcp-core/src/logging/: mod.rs  tracing.rs
crates/mcp-core/src/prompts/: mod.rs  template.rs
crates/mcp-core/src/protocol/: mod.rs  validation.rs
crates/mcp-core/src/protocol/tests/: mod.rs  validation_tests.rs
crates/mcp-core/tests/: context_test.rs  slash_command_test.rs
crates/mcp-llm/: Cargo.toml  README.md
crates/mcp-llm/src/: lib.rs
crates/mcp-llm/src/anthropic/: mod.rs
crates/mcp-llm/src/bedrock/: mod.rs
crates/mcp-llm/src/client_trait/: mod.rs
crates/mcp-llm/src/schema/: mod.rs
crates/mcp-llm/src/streaming/: mod.rs
crates/mcp-llm/tests/: bedrock_test.rs  tool_discovery_test.rs
crates/mcp-metrics/: Cargo.toml
crates/mcp-metrics/examples/: basic_usage.rs
crates/mcp-metrics/src/: lib.rs
crates/mcp-resources/: Cargo.toml  README.md
crates/mcp-resources/src/: lib.rs
crates/mcp-resources/tests/: resource_test.rs
crates/mcp-runtime/: Cargo.toml  README.md
crates/mcp-runtime/src/: lib.rs
crates/mcp-runtime/src/event_bus/: bus.rs  events.rs  mod.rs
crates/mcp-runtime/src/executor/: mod.rs  tool_factory.rs
crates/mcp-runtime/src/executor/tests/: duplicate_detection_test.rs
crates/mcp-runtime/src/session/: mod.rs
crates/mcp-runtime/tests/: event_bus_multi_client_test.rs  event_bus_simple_test.rs  event_bus_test.rs  session_manager_test.rs
crates/mcp-tools/: Cargo.toml  README.md
crates/mcp-tools/src/: lib.rs
crates/mcp-tools/src/analysis/: language_tool.rs  mod.rs  project.rs
crates/mcp-tools/src/analysis/languages/: common.rs  js.rs  mod.rs  python.rs  rust.rs
crates/mcp-tools/src/diff/: diff_tool.rs  mod.rs  patch_tool.rs
crates/mcp-tools/src/filesystem/: mod.rs
crates/mcp-tools/src/registry/: mod.rs
crates/mcp-tools/src/search/: find.rs  grep.rs  mod.rs
crates/mcp-tools/src/shell/: mod.rs
crates/mcp-tools/src/testing/: mod.rs  runner.rs
crates/mcp-tools/tests/: diff_test.rs  find_test.rs  grep_test.rs  language_analyzer_test.rs  patch_test.rs  project_test.rs  shell_test.rs  test_runner_test.rs
crates/mcpterm-cli/: Cargo.toml  README.md
crates/mcpterm-cli/examples/: response_formatter_test.rs  run_with_mock.rs  test_formatter.rs
crates/mcpterm-cli/src/: cli_main.rs  cli_session.rs  event_adapter.rs  formatter.rs  json_filter.rs  lib.rs  main.rs  mock.rs  run.rs
crates/mcpterm-cli/tests/: cli_test.rs  json_extractor_test.rs  validation_test.rs
crates/mcpterm-tui/: CLEAN_INTEGRATION_PLAN.md  Cargo.toml  DIRECT_MODE_INTEGRATION.md  README.md  TUI_DEBUGGING.md
crates/mcpterm-tui/examples/: EXAMPLES.md  INTEGRATION_PLAN.md  README.md  direct_key_handler.rs  direct_key_handling.rs  direct_tui.rs  final_fixed_implementation.rs  fixed_implementation.rs  improved_implementation.rs  improved_implementation_with_scrolling.rs  input_test.rs  integrated_solution.rs  key_event_test.rs  minimal_editor.rs  minimal_tui.rs  raw_terminal_test.rs  rebuild_final_implementation.rs  rebuild_step4_with_ratatui.rs  rebuild_step5_with_edtui.rs  simple_solution.rs  simple_tui.rs  stdin_test.rs  step1_minimal.rs  step2_two_panels.rs  step3_with_modes.rs  test_terminal.rs  tty_test.rs
crates/mcpterm-tui/examples/rebuild/: NEXT_STEPS.md  final_implementation.rs  step4_with_ratatui.rs  step5_with_edtui.rs
crates/mcpterm-tui/examples/tests/: README.md  test-formatter.rs  test-prompt.txt  test_tool_execution.rs
crates/mcpterm-tui/src/: INTEGRATION_CHANGES.md  clean_impl.rs  direct_impl.rs  lib.rs  main.rs
crates/mcpterm-tui/src/events/: mod.rs
crates/mcpterm-tui/src/state/: mod.rs
crates/mcpterm-tui/src/ui/: input_editor.rs  message_viewer.rs  mod.rs
docs/: ARCHITECTURE.md  ERRORS.md  EVENT_BUS_ARCHITECTURE.md  LOGGING.md  METRICS.md  README.md  SLASH_COMMANDS.md  TOOL_EXAMPLES.md  TOOL_EXECUTION_FLOW.md  TOOL_IMPLEMENTATION.md  TOOL_IMPLEMENTATION_PLAN.md  TOOL_REGISTRATION.md
docs/tui/: fix_focus_navigation.md  keyboard_input_fix.md
src/: main.rs
