[package]
name = "mcpterm"
version = "0.1.0"
edition = "2021"
description = "Terminal-based AI coding assistant using MCP protocol"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Terminal UI
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-textarea = { version = "0.7.0", features = ["ratatui", "crossterm", "search"] }

# AWS SDK for Bedrock
aws-config = "1.1.1"
aws-sdk-bedrockruntime = "1.5.0"

# Utilities
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
uuid = { version = "1.4.1", features = ["v4"] }
clap = { version = "4.3.10", features = ["derive"] }
dirs = "6.0.0"
chrono = "0.4"
edtui = { git = "https://github.com/navicore/edtui", branch = "mcpterm-style-api", features = ["mouse-support", "syntax-highlighting"], default-features = false }
arboard = "3.5.0"
tempfile = "3.10.0"
url = "2.3.1"
base64 = "0.13.0"
futures = "0.3.28"

# MCP Tool Dependencies
walkdir = "2.4.0"
globset = "0.4.13"
wait-timeout = "0.2.0"
regex = "1.9.5"
