[package]
name = "mcp-core"
version = "0.1.0"
edition = "2021"
description = "Core types and protocol definition for Model Context Protocol"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }