[package]
name = "mcp-llm"
version = "0.1.0"
edition = "2021"
description = "LLM provider adapters for Model Context Protocol"

[dependencies]
mcp-core = { path = "../mcp-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }