[package]
name = "mcp-llm"
version = "0.1.0"
edition = "2021"
description = "LLM provider adapters for Model Context Protocol"

[dependencies]
mcp-core = { path = "../mcp-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-types = { workspace = true }
bytes = "1.5.0"
futures = { workspace = true }
jsonschema = "0.17.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }