[package]
name = "mcp-metrics"
version = "0.1.0"
edition = "2021"
description = "Metrics collection and reporting for mcpterm-rs"
authors = ["Ed Sweeney <ed@onextent.com>"]

[dependencies]
log = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.10.0"