[package]
name = "mcp-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime execution environment for Model Context Protocol"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-metrics = { path = "../mcp-metrics" }
mcp-resources = { path = "../mcp-resources" }
mcp-tools = { path = "../mcp-tools" }
mcp-llm = { path = "../mcp-llm" }
# Removed mcpterm-cli dependency to avoid circular dependency
anyhow = { workspace = true }
async-trait = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "rt", "macros"] }
tracing = { workspace = true }
uuid = { workspace = true }
md5 = "0.7.0"
lazy_static = "1.4.0"
scopeguard = "1.2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
