[package]
name = "mcp-tools"
version = "0.1.0"
edition = "2021"
description = "Tool implementations for Model Context Protocol"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-resources = { path = "../mcp-resources" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
wait-timeout = { workspace = true }
regex = { workspace = true }