[package]
name = "mcpterm-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Model Context Protocol"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-llm = { path = "../mcp-llm" }
mcp-runtime = { path = "../mcp-runtime" }
mcp-tools = { path = "../mcp-tools" }
mcp-resources = { path = "../mcp-resources" }
mcp-metrics = { path = "../mcp-metrics" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }

# For the mock implementation
async-trait = { workspace = true }
tokio-stream = { version = "0.1" }

# For terminal color support detection
atty = "0.2"

# For channels in event bus
crossbeam-channel = "0.5"
