[package]
name = "mcpterm-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Model Context Protocol"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-metrics = { path = "../mcp-metrics" }
mcp-llm = { path = "../mcp-llm" }
mcp-runtime = { path = "../mcp-runtime" }
mcp-tools = { path = "../mcp-tools" }
mcp-resources = { path = "../mcp-resources" }
anyhow = { workspace = true }
atty = "0.2"
clap = { workspace = true }
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
edtui = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
arboard = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
